--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hostinger YouTube Channel</title>
+    <title>Hostinger-Inspired Webpage</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f2f2f2;
+            background-color: #f8f9fa;
+            color: #333;
         }
         header {
             background-color: #007bff;
@@ -17,59 +18,115 @@
             padding: 20px;
             text-align: center;
         }
-        h1 {
-            margin: 0;
-            font-size: 36px;
-        }
-        nav {
-            background-color: #4CAF50;
-            overflow: hidden;
-        }
-        nav a {
-            float: left;
-            display: block;
-            color: #fff;
-            text-align: center;
-            padding: 14px 20px;
-            text-decoration: none;
-        }
-        nav a:hover {
-            background-color: #ddd;
-            color: #000;
-        }
         .container {
-            margin: 20px auto;
-            padding: 20px;
-            background-color: #fff;
             max-width: 800px;
-        }
-        .video {
-            margin-bottom: 20px;
+            margin: 20px auto;
+            padding: 0 20px;
+            box-sizing: border-box;
         }
         iframe {
             width: 100%;
             height: 400px;
+            border: none;
+        }
+        .content {
+            background-color: #fff;
+            padding: 20px;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+        }
+        footer {
+            text-align: center;
+            padding: 20px;
+            background-color: #007bff;
+            color: #fff;
         }
     </style>
 </head>
 <body>
-    <header>
-        <h1>Hostinger YouTube Channel</h1>
-    </header>
-    <nav>
-        <a href="#">Home</a>
-        <a href="#">About</a>
-        <a href="#">Videos</a>
-        <a href="#">Contact</a>
-    </nav>
-    <div class="container">
-        <div class="video">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/VIDEO_ID_HERE" frameborder="0" allowfullscreen></iframe>
-        </div>
-        <div class="video">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/VIDEO_ID_HERE" frameborder="0" allowfullscreen></iframe>
-        </div>
-        <!-- Add more video embeds here -->
+
+<header>
+    <h1>Hostinger-Inspired Webpage</h1>
+</header>
+
+<div class="container">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/VIDEO_ID_HERE" frameborder="0" allowfullscreen></iframe>
+
+    <div class="content">
+        <h2>Welcome to Our Webpage</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eget est ac libero consectetur ultricies. Nullam nec nisi eget risus tempor luctus.</p>
+        <p>Suspendisse potenti. Vestibulum id nunc ut felis gravida suscipit nec vel tellus. Phasellus a efficitur lacus.</p>
     </div>
+</div>
+
+<footer>
+    <p>&copy; 2024 Your Company Name</p>
+</footer>
+
+</body>
+</html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Hostinger-Inspired Webpage</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f8f9fa;
+            color: #333;
+        }
+        header {
+            background-color: #007bff;
+            color: #fff;
+            padding: 20px;
+            text-align: center;
+        }
+        .container {
+            max-width: 800px;
+            margin: 20px auto;
+            padding: 0 20px;
+            box-sizing: border-box;
+        }
+        iframe {
+            width: 100%;
+            height: 400px;
+            border: none;
+        }
+        .content {
+            background-color: #fff;
+            padding: 20px;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+        }
+        footer {
+            text-align: center;
+            padding: 20px;
+            background-color: #007bff;
+            color: #fff;
+        }
+    </style>
+</head>
+<body>
+
+<header>
+    <h1>Hostinger-Inspired Webpage</h1>
+</header>
+
+<div class="container">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/v=kTEXh_xqsCo" frameborder="0" allowfullscreen></iframe>
+
+    <div class="content">
+        <h2>Welcome to Our Webpage</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eget est ac libero consectetur ultricies. Nullam nec nisi eget risus tempor luctus.</p>
+        <p>Suspendisse potenti. Vestibulum id nunc ut felis gravida suscipit nec vel tellus. Phasellus a efficitur lacus.</p>
+    </div>
+</div>
+
+<footer>
+    <p>&copy; 2024 Your Company Name</p>
+</footer>
+
 </body>
 </html>
