--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hostinger-Inspired Webpage</title>
+    <title>Our Youtube Channel!</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -45,11 +45,11 @@
 <body>
 
 <header>
-    <h1>Hostinger-Inspired Webpage</h1>
+    <h1>Our Youtube Channel!</h1>
 </header>
 
 <div class="container">
-    <iframe width="560" height="315" src="https://www.youtube.com/watch?v=kTEXh_xqsCo" frameborder="0" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/watch?v=kTEXh_xqsCo" frameborder="0" allowfullscreen></iframe>
 
     <div class="content">
         <h2>Welcome to Our Webpage</h2>
